--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<header class="header">
 		<nav class="nav">
-			<h1 class="nav-title">Omega</h1>
+			<h1 class="nav-title">Ceylon</h1>
 			<ul class="nav-list">
 				<li class="nav-item">
 					<a href="#" class="nav-link">
